...
    <string name="last_name">Last name</string>
    <string name="join_us">Join Us</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="alerady_a_member_login">Already a member? Log in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="at_least_3_characters">At least 3 characters</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="longer_than_8">Longer than 8</string>
...
